fixed layout issues
Former-commit-id: c3e2a9502aba45526deb9897b88e6194a6e6ce4c

--- a/intermine/webapp/main/resources/webapp/css/bagDetails.css
+++ b/intermine/webapp/main/resources/webapp/css/bagDetails.css
@@ -6,33 +6,24 @@
   vertical-align: top;}
 
 #bagDescriptionTextarea{
-  float:left;
-  margin:20px;width:100%;text-align: center;}
+  text-align: center;}
 
 #bagDescriptionDiv{
-  float:left;
-  margin:20px;padding:10px;
-  overflow: auto;
-  height:50px;width:100%;
-  text-align:left;}
+  overflow-y:auto;
+  overflow:auto;
+  width:100%;
+  margin-top:20px;
+  padding:10px;
+  height:50px;
+  text-align:left;
+}
 
 #emptyDesc{
-  width:100%;
   text-align:center;font-style: italic;}
 
 li {
   margin-left: 10px;
   list-style: none;}
 
-#rightColumn{
-  margin-left:50%;}
-
-#leftColumn{
-  width:48%;float:left;}
-    
 #convertList{
-  padding:0 10px 20px 10px;}
-  
-#bagdetailsresults{
-  float:left;}
-  
+  padding:0 10px 20px 10px;}  
